--- a/app/styles/components/_player.scss
+++ b/app/styles/components/_player.scss
@@ -6,14 +6,83 @@
     justify-content: center;
     align-content: flex-start;
     width: 300px;
-    
+
 }
 
 .player-container {
-    background: lightgrey;
+    border-radius: 65px;
     display: inline-flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
     align-content: flex-start;
+    height: 300px;
+    position: absolute;
+    overflow: auto;
+    justify-content: center;
+
+}
+
+#player-paneArrow {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 245px;
+    top: 124px;
+    z-index: 2;
+}
+
+#second-paneArrow {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 680px;
+    top: 581px;
+    z-index: 4;
+}
+
+#third-paneArrow {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 228px;
+    top: 481px;
+    z-index: 6;
+}
+
+#player-pane{
+    top: 100px;
+    left: 20px;
+    background: lightgrey;
+    height: 25px;
+}
+
+#second-pane {
+    top: 300px;
+    left: 200px;
+    width: 500px;
+    background: black;
+    z-index: 3;
+}
+
+#third-pane {
+    top: 200px;
+    left: 150px;
+    width: 100px;
+    background: red;
+    z-index: 5;
+}
+
+.search-result {
+    background-color: black;
+    color: white;
+}
+
+.search-result:hover {
+    background-color: white;
+    color: black;
+    cursor: pointer;
+}
+
+body{
+    position: absolute;
 }
