--- a/app/styles/components/_player.scss
+++ b/app/styles/components/_player.scss
@@ -49,6 +49,24 @@
     z-index: 6;
 }
 
+#tracks-paneArrow {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 545px;
+    top: 432px;
+    z-index: 8;
+}
+
+#lyrics-paneArrow {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 747px;
+    top: 631px;
+    z-index: 10;
+}
+
 #player-pane{
     top: 100px;
     left: 20px;
@@ -68,8 +86,24 @@
     top: 200px;
     left: 150px;
     width: 100px;
-    background: red;
+    background: #191414;
     z-index: 5;
+}
+
+#tracks-pane {
+    top: 150px;
+    left: 250px;
+    width: 315px;
+    background: yellow;
+    z-index: 7;
+}
+
+#lyrics-pane {
+    top: 350px;
+    left: 450px;
+    width: 315px;
+    background: green;
+    z-index: 9;
 }
 
 .search-result {
