--- a/app/styles/components/_player.scss
+++ b/app/styles/components/_player.scss
@@ -6,7 +6,6 @@
     justify-content: center;
     align-content: flex-start;
     width: 300px;
-
 }
 
 .player-container {
@@ -15,64 +14,71 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-content: flex-start;
-    height: 300px;
     position: absolute;
     overflow: hidden;
     justify-content: center;
 
 }
 
+.whole-page {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+}
+
+.top-bar {
+    display: none;
+}
+
 #search-barArrow {
     position: absolute;
     height: 20px;
     width: 20px;
-    z-index: 2;
+    z-index: 16;
 }
 
-#search-resultsArrow {
+.arrow {
     position: absolute;
     height: 20px;
     width: 20px;
+}
 
+.arrow:hover {
+    cursor: grab;
+}
+
+#artist-resultsArrow {
     z-index: 4;
 }
 
 #spotify-resultsArrow {
-    position: absolute;
-    height: 20px;
-    width: 20px;
     z-index: 6;
 }
 
 #tracks-paneArrow {
-    position: absolute;
-    height: 20px;
-    width: 20px;
-
     z-index: 8;
 }
 
 #lyrics-paneArrow {
-    position: absolute;
-    height: 20px;
-    width: 20px;
     z-index: 10;
 }
 
 #scrobble-paneArrow {
-    position: absolute;
-    height: 20px;
-    width: 20px;
     z-index: 12;
 }
 
-#search-bar{
-
-    background: lightgrey;
-    height: 25px;
+#album-resultsArrow {
+    z-index: 14;
 }
 
-#search-results {
+
+#search-bar{
+    background: lightgrey;
+    height: 25px;
+    z-index: 15;
+}
+
+#artist-results {
     background: black;
     z-index: 3;
 }
@@ -97,14 +103,32 @@
     z-index: 11;
 }
 
-.search-result {
+#album-results {
+    background: green;
+    z-index: 13;
+}
+
+.artist-result {
     background-color: black;
     color: white;
 }
 
-.search-result:hover {
+
+.artist-result:hover {
     background-color: white;
     color: black;
+    cursor: pointer;
+}
+
+.album-result {
+    background-color: yellow;
+    color: blue;
+}
+
+
+.album-result:hover {
+    background-color: blue;
+    color: yellow;
     cursor: pointer;
 }
 
