pause button displays correctly

--- a/app/styles/components/_player.scss
+++ b/app/styles/components/_player.scss
@@ -166,3 +166,15 @@ h2 {
 input {
     color: black;
 }
+
+controls-image {
+    width: 100%;
+}
+
+#youtube-controls .vertical-title{
+    display: none;
+}
+
+#youtube-controls .content {
+    margin: 0;
+}
