--- a/app/styles/components/_player.scss
+++ b/app/styles/components/_player.scss
@@ -132,6 +132,13 @@ h2 {
     display: none;
 }
 
+.lock {
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    display: none;
+}
+
 .artist-image {
     width: 50px;
 }
@@ -171,10 +178,41 @@ controls-image {
     width: 100%;
 }
 
-#youtube-controls .vertical-title{
+#controls .vertical-title{
     display: none;
 }
 
-#youtube-controls .content {
+#controls .content {
     margin: 0;
+    max-width: 95px;
+}
+
+#play-img {
+    height: 55px;
+    float: right;
+}
+
+#next-img {
+    height: 35px;
+    float: right;
+    margin-right: 10px;
+}
+
+#prev-img {
+    height: 40px;
+}
+
+#play-container {
+    width: 100%;
+    height: 55px;
+}
+
+#prev-container{
+    width: 100%;
+    height: 40px;
+}
+
+#next-container{
+    width: 100%;
+    height: 35px;
 }
