--- a/app/styles/components/_player.scss
+++ b/app/styles/components/_player.scss
@@ -216,3 +216,14 @@ controls-image {
     width: 100%;
     height: 35px;
 }
+
+#progress-bar .content{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+#progress-fill {
+    height: 100%;
+    width: 100%;
+}
